Fixed clion strucutre

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 3.13)
 project(garage_math)
 
-include_directories(src)
-
 set(CMAKE_CXX_STANDARD 14)
 
-add_library(garage_math INTERFACE)
+include_directories(src)
 
-target_include_directories(garage_math INTERFACE src)
+add_library(${PROJECT_NAME} STATIC src/main.cpp)
+target_include_directories(${PROJECT_NAME} INTERFACE src)
